bad/2020-07-06/15-45/85.1/build.err
run.c: In function ‘lent’:
run.c:10:18: error: request for member ‘length’ in something not a structure or union
 for (i=0; i<graft.length; i++) {
                  ^